tests/fixtures/readmes/invalid/missing_type.readme
Short:        Missing type
Uploader:     test@example.com (T. Test)
Architecture: m68k-amigaos

Type field is absent.
